<resources>
    <string name="app_name">lemonPie</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to_lemonpie">Welcome to LemonPie!</string>
    <string name="keep_your_data_safe">Keep your data safe</string>
    <string name="google_logo">Google Logo</string>
    <string name="sign_in_with_google">Continue With Google</string>
    <string name="default_web_client_id">257870510588-d8ouinuq9ri7n40hr3v6qtppv18ucp0c.apps.googleusercontent.com
</string>
    <string name="logged_in_successfully">Logged in successfully!</string>
    <string name="logout">Logout</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="quick_actions">Actions</string>
    <string name="create_new_item">Add new item</string>
    <string name="search_items">Search</string>
</resources>